cmake_minimum_required(VERSION 3.5)
PROJECT(stop_wait)

SET(CMAKE_C_COMPTLER GCC)
add_definitions(-std=c++14)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
aux_source_directory(${PROJECT_SOURCE_DIR}/src SRC_LIST)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
ADD_EXECUTABLE(stop_wait ${SRC_LIST} src/GBNSender.hpp src/GBNReceiver.hpp src/config.h src/SRReceiver.hpp src/SRSender.hpp src/TCPSender.hpp)
FIND_LIBRARY(NETSIM_LIB libnetsim.a ${PROJECT_SOURCE_DIR}/lib)
TARGET_LINK_LIBRARIES(stop_wait ${NETSIM_LIB} -no-pie)
